--- a/css/style.css
+++ b/css/style.css
@@ -106,22 +106,22 @@ input[type="radio"].visually-hidden {
 
 .btn-filter {
     display: block;
-    margin-top: 25px;
-    margin-left: 3px;
-    padding: 8px 26px;
+    margin-top: 21px;
+    margin-left: 2px;
+    padding: 7px 28px;
     font-size: 16px;
     line-height: 18px;
     font-weight: 500;
     color: #fff;
     background-color: rgba(255,255,255,.2);
     border: 2px solid #fff;
-    border-radius: 16px;
+    border-radius: 25px;
     cursor: pointer;
 }
 
 .btn-filter:focus,
 .btn-filter:hover {
-    padding: 10px 27px;
+    padding: 9px 30px;
     color: #323232;
     background-color: #fff;
     border: 0;
@@ -218,23 +218,101 @@ input[type="radio"].visually-hidden {
     outline: 0;
 }
 
-.site-navigation .sub-menu {
-    display: none;
-    position: absolute;
-    top: 26px;
-    left: -20px;
+.site-link:active {
+    box-shadow: inset 0 2px 1px 0 #696969;
+}
+
+.site-navigation .site-active {
+    margin: 22px -13px -8px;
+    padding: 7px 13px 8px;
+    background-color: #d07058;
+    border-radius: 30px;
+    border: 0;
+    outline: 0;  
 }
 
 .site-navigation > li:hover .sub-menu {
     display: block;
 }
 
-.sub-menu > li {
-    display: block;
-    position: relative;
+.site-navigation .sub-menu {
+    display: none;
+    position: absolute;
+    top: 55px;
+    left: -21px;
     margin: 0;
     padding: 0;
+    padding-top: 5px;
+    min-width: 143px;
     list-style: none;
+    z-index: 2;
+}
+
+.sub-menu .sub-item {
+    background-color: #f7f6f3;
+    box-shadow: 0px 20px 20px 0 rgba(0, 0, 0, 0.4);
+}
+
+.sub-menu a {
+    display: block;
+    padding: 6px 20px 7px;
+    font-size: 14px;
+    font-weight: 400;
+    color: #323232;
+    text-decoration: none;
+}
+
+.sub-menu .new-stuff {
+    padding: 11px 21px;
+    font-weight: 700;
+}
+
+.sub-menu .sub-item:first-child::after {
+    display: table;
+    content: "";
+    margin: 0 9px 0 6px;
+    width: 128px;
+    height: 1px;
+    background-color: rgba(50, 50, 50, 0.2);
+}
+
+.sub-item:last-child a {
+    padding-bottom: 10px;
+}
+
+.sub-item:first-child,
+.sub-item:first-child a {
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.sub-menu .sub-item:nth-child(4) {
+    display: block;
+}
+
+.sub-item:last-child,
+.sub-item:last-child a {
+    padding-top: 3px;
+    padding-bottom: 6px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.sub-menu .sub-active {
+    background-color: #d07058;
+}
+
+.sub-active a {
+    color: #ffffff;
+}
+
+.sub-menu li:hover:not(.sub-active) {
+    background-color: #fbded7;
+}
+
+.sub-menu a:active {
+    color: #ffffff;
+    background-color: #f6b5a5;
 }
 
 .user-navigation a {
@@ -263,6 +341,10 @@ input[type="radio"].visually-hidden {
     font-size: 14px;
     line-height: 16px;
     color: #000;
+}
+
+.user-navigation .basket-full {
+    background-color: #f8f7f4;
 }
 
 .user-btn:hover {
@@ -308,6 +390,13 @@ input[type="radio"].visually-hidden {
     margin-top: -27px;
     margin-left: 24px;
     margin-right: 23px; 
+}
+
+.basket-full .basket-link {
+    color: #000;
+    margin-right: 3px;
+    padding-left: 2px;
+    padding-right: 3px;
 }
 
 .header-block {
@@ -448,11 +537,25 @@ input[type="radio"].visually-hidden {
 .breadcrumbs {
     margin: 0;
     padding: 0;
-    margin-bottom: 10px;
+    margin-top: -1px;
+    margin-bottom: 4px;
     list-style: none;
     font-size: 14px;
     line-height: 16px;
     font-weight: 400;
+}
+
+.breadcrumbs li {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.breadcrumbs li:not(:last-child)::after {
+    content: "»";
+    width: 5px;
+    height: 5px;
+    margin-left: 8px;
+    margin-right: 3px;
 }
 
 .breadcrumbs a {
@@ -462,9 +565,8 @@ input[type="radio"].visually-hidden {
 }
 
 .page-title {
-    margin: 0;
-    padding: 0;
-    margin-bottom: 20px;
+    margin-top: 2px;
+    margin-bottom: 26px;
     font-size: 35px;
     line-height: 41px;
     font-weight: 700;
@@ -474,20 +576,20 @@ input[type="radio"].visually-hidden {
     width: 960px;
 }
 
-.sort {
-    display: flex;
-    flex-wrap: wrap
-    width: 960px;
-}
-
 .filters fieldset {
+    box-sizing: border-box;
     border: none;
+    margin: 0;
+    padding: 0;
+    margin-right: 15px;
 }
 
 .filters legend {
     font-size: 14px;
     line-height: 16px;
     font-weight: 500;
+    margin-left: 15px;
+    margin-bottom: 3px;
 }
 
 .filters ul {
@@ -501,13 +603,8 @@ input[type="radio"].visually-hidden {
     font-weight: 500;
 }
 
-.filter-option:hover + label,
-.filter-option:focus + label {
-    /**/
-}
-
-.filter-option:checked:hover + label,
-.filter-option:checked:focus + label {
+.filter-option input[type=radio]:checked:hover + label,
+.filter-option input[type=radio]:checked:focus + label {
     /**/
 }
 
@@ -519,18 +616,151 @@ input[type="radio"].visually-hidden {
     /**/
 }
 
+.filters .sort {
+    display: flex;
+    flex-wrap: wrap;
+    width: 960px;
+    margin-top: 17px;
+}
+
+.sort-section .sort-wrapper {
+    position: relative;
+    margin-top: 4px;
+    background-color: rgba(255,255,255,.2);
+    border-radius: 30px;
+    z-index: 1;
+}
+
+.sort-wrapper select {
+    padding: 8px 23px 8px 13px;
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 500;
+    color: #fff;
+    background-color: transparent;
+    border: 0;
+}
+
+.sort-list option {
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 500;
+}
+
+.fat ul {
+    box-sizing: border-box;
+    width: 100%;
+    height: 36px;
+    margin: 0;
+    padding-top: 7px;
+    padding-left: 17px;
+    border-radius: 18px;
+    background-color: rgba(248, 247, 244, 0.2);
+    margin-top: 3px;
+}
+
+.fat li {
+    display: inline;
+    margin-right: 18px;
+    margin-left: -4px;
+}
+
+.fat-filter input[type=radio] + label::before {
+    display: inline-block;
+    vertical-align: middle;
+    content: "";
+    padding-right: 7px;
+    width: 25px;
+    height: 25px;
+    opacity: 0.8;
+    background-image: url(../img/radio-off.svg);
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+.fat-filter input[type=radio]:hover + label::before,
+.fat-filter input[type=radio]:focus + label::before {
+    opacity: 1;
+}
+
+.fat-filter input[type=radio]:hover:checked + label::before,
+.fat-filter input[type=radio]:focus:checked + label::before {
+    opacity: 1;
+    background-image: url(../img/radio-on.svg);
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+.fat-filter input[type=radio]:disabled + label::before,
+.fat-filter input[type=radio]:disabled:checked + label::before {
+    opacity: 0.4;
+}
+
+.crumbs ul {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    margin-top: 2px;
+    padding-top: 8px;
+    padding-bottom: 5px;
+    padding-left: 16px;
+    background-color: rgba(255,255,255,.2);
+    border-radius: 30px;
+}
+
+.crumbs li {
+    display: inline;
+    margin-right: 20px;
+}
+
+.crumbs-filter input[type=checkbox] + label::before {
+    display: inline-block;
+    vertical-align: middle;
+    content: "";
+    padding-left: 9px;
+    width: 20px;
+    height: 20px;
+    opacity: 0.8;
+    background-image: url(../img/checkbox-off.svg);
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+.crumbs-filter input[type=checkbox]:hover + label::before,
+.crumbs-filter input[type=checkbox]:focus+ label::before {
+    opacity: 1;
+}
+
+.crumbs-filter input[type=checkbox]:checked + label::before {
+    background-image: url(../img/checkbox-on.svg);
+    width: 24px;
+    height: 20px;
+    opacity: 1;
+    padding-left: 5px;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+.crumbs-filter input[type=checkbox]:disabled + label::before {
+    opacity: 0.4;
+}
+
 .range-filter {
-  width: 219px;
+    width: 220px;
+}
+
+.price-controls {
+    margin-left: -1px;
+    margin-bottom: 6px;
 }
 
 .range-controls {
-  position: relative;
-  margin-top: 5px;
-  padding: 0 22px;
-  padding-top: 1px;
-  height: 35px;
-  background: rgba(255,255,255,0.2);
-  border-radius: 30px;
+    position: relative;
+    padding: 0 22px;
+    padding-top: 1px;
+    height: 35px;
+    background: rgba(255,255,255,0.2);
+    border-radius: 30px;
 }
 
 .range-controls .scale {
@@ -540,35 +770,35 @@ input[type="radio"].visually-hidden {
 }
 
 .range-controls .bar {
-  margin-left: 17px;
-  width: 60%;
-  height: 4px;
-  background: #fff;
+    margin-left: 17px;
+    width: 60%;
+    height: 4px;
+    background: #fff;
 }
 
 .range-controls .toggle {
-  position: absolute;
-  top: 8px;
-  width: 4px;
-  height: 4px;
-  border: 8px solid #fff;
-  border-radius: 50%;
-  background: #ababab;
-  box-shadow: 0 1px 1px 0 #cfcfcf;
-  cursor: pointer;
+    position: absolute;
+    top: 8px;
+    width: 4px;
+    height: 4px;
+    border: 8px solid #fff;
+    border-radius: 50%;
+    background: #ababab;
+    box-shadow: 0 1px 1px 0 #cfcfcf;
+    cursor: pointer;
 }
 
 .range-controls .toggle-min {
-  left: 35px;
+    left: 34px;
 }
 
 .range-controls .toggle-max {
-  left: 133px;
+    left: 132px;
 }
 
 .price-controls label {
-  display: inline-block;
-  width: 50%;
+    display: inline-block;
+    width: 50%;
 }
 
 .free-sweets {
@@ -647,6 +877,10 @@ input[type="radio"].visually-hidden {
     margin-right: 26px;
 }
 
+.inner .product-item {
+    margin-bottom: 24px;
+}
+
 .product-item .hit {
     position: relative;
 }
@@ -708,11 +942,12 @@ input[type="radio"].visually-hidden {
     padding-left: 8px;
     width: 210px;
 }
-}
 
 .product-item p {
-    margin-top: 21px;
+    width: 258px;
     text-align: center;
+    margin-top: 21px;
+    margin-left: 5px;
 }
 
 .product-item a {
@@ -942,14 +1177,24 @@ input[type="radio"].visually-hidden {
 }
 
 .pagination-list {
+    display: flex;
+    justify-content: flex-end;
+    flex-wrap: nowrap;
     margin: 0;
     padding: 0;
     list-style: none;
+    margin-top: 38px;
+    margin-bottom: 39px;
 }
 
-.pagination-item a {
+.pagination-list li {
+    margin-left: 21px;
+}
+
+.pagination-list a {
     color: #fff;
     text-decoration: none;
+    fill: #fff;
 }
 
 .pagination-item a:hover,
@@ -972,6 +1217,15 @@ input[type="radio"].visually-hidden {
     color: #353535;
     background-color: #fff;
     border-radius: 100%;
+}
+
+.pagination-list .disabled {
+    opacity: 0.2;
+    cursor: default;
+}
+
+.pagination-list .not-disabled {
+    opacity: 1;
 }
 
 .map {
