--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 body {
     margin: 0;
     padding: 0;
@@ -19,6 +20,7 @@ a {
 
 img {
     max-width: 100%;
+    height: auto;
 }
 
 .visually-hidden:not(:focus):not(:active),
@@ -125,6 +127,7 @@ input[type="radio"].visually-hidden {
     color: #323232;
     background-color: #fff;
     border: 0;
+    outline: 0;
 }
 
 .btn-filter:active {
@@ -155,6 +158,7 @@ input[type="radio"].visually-hidden {
     height: 64px;
     padding-top: 8px;
     padding-right: 24px;
+    border: 0;
 }
 
 .site-navigation {
@@ -191,6 +195,7 @@ input[type="radio"].visually-hidden {
 }
 
 .site-navigation .site-item {
+    max-width: 142px;
     position: relative;
     display: inline-block;
     vertical-align: top;
@@ -222,13 +227,16 @@ input[type="radio"].visually-hidden {
     box-shadow: inset 0 2px 1px 0 #696969;
 }
 
+.user-btn > .link {
+    display: block;
+}
+
 .site-navigation .site-active {
     margin: 22px -13px -8px;
     padding: 7px 13px 8px;
     background-color: #d07058;
     border-radius: 30px;
     border: 0;
-    outline: 0;  
 }
 
 .site-navigation > li:hover .sub-menu {
@@ -332,7 +340,8 @@ input[type="radio"].visually-hidden {
     position: relative;
     display: inline-block;
     vertical-align: top;
-    height: 33px;
+    max-width: 117px;
+    min-height: 33px;
     margin-top: 21px;
     margin-left: 41px;
     margin-right: -28px;
@@ -347,12 +356,14 @@ input[type="radio"].visually-hidden {
     background-color: #f8f7f4;
 }
 
-.user-btn:hover {
+.user-btn:hover,
+.user-btn:focus {
     background-color: #f8f7f4;
     border-radius: 30px;
 }
 
-.user-btn:hover a {
+.user-btn:hover a,
+.user-btn:focus a {
     color: #000;
 }
 
@@ -360,7 +371,8 @@ input[type="radio"].visually-hidden {
     fill: #fff;
 } 
 
-.user-btn:hover svg {
+.user-btn:hover svg,
+.user-bth:focus svg {
     fill: #000;
 }
 
@@ -564,6 +576,11 @@ input[type="radio"].visually-hidden {
     border-bottom: 1px solid rgba(255,255,255,0.2);
 }
 
+.breadcrumbs a:hover, 
+.breadcrumbs a:focus {
+    color: #ffbc9e;
+}
+
 .page-title {
     margin-top: 2px;
     margin-bottom: 26px;
@@ -603,19 +620,6 @@ input[type="radio"].visually-hidden {
     font-weight: 500;
 }
 
-.filter-option input[type=radio]:checked:hover + label,
-.filter-option input[type=radio]:checked:focus + label {
-    /**/
-}
-
-.filter-option:disabled + label {
-    /**/
-}
-
-.filter-option:checked:disabled + label {
-    /**/
-}
-
 .filters .sort {
     display: flex;
     flex-wrap: wrap;
@@ -631,20 +635,39 @@ input[type="radio"].visually-hidden {
     z-index: 1;
 }
 
+.sort-wrapper:hover {
+    background-color: #fff;
+    border-radius: 30px;
+}
+
 .sort-wrapper select {
-    padding: 8px 23px 8px 13px;
+    padding: 8px 46px 8px 13px;
     font-size: 16px;
     line-height: 18px;
     font-weight: 500;
     color: #fff;
     background-color: transparent;
     border: 0;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-image: url(../img/select-arrow-white.svg);
+    background-repeat: no-repeat;
+    background-position: 161px 12px;
+}
+
+.sort-wrapper:hover select {
+    color: #000;
+    background-image: url(../img/select-arrow-black.svg);
+    background-repeat: no-repeat;
+    background-position: 161px 12px;
 }
 
 .sort-list option {
     font-size: 16px;
     line-height: 18px;
     font-weight: 500;
+    color: #000;
 }
 
 .fat ul {
@@ -865,11 +888,17 @@ input[type="radio"].visually-hidden {
 .products {
     display: flex;
     flex-wrap: wrap;
+    justify-content: flex-start;
     margin: 0;
     padding: 0;
     list-style: none;
     margin-top: 40px;
     width: 1200px;
+}
+
+.products img {
+    width: 267px;
+    height: 267px;
 }
 
 .product-item {
@@ -1224,6 +1253,10 @@ input[type="radio"].visually-hidden {
     cursor: default;
 }
 
+.pagination-list .disabled svg {
+    transform: rotate(-180deg);
+}
+
 .pagination-list .not-disabled {
     opacity: 1;
 }
@@ -1305,6 +1338,68 @@ input[type="radio"].visually-hidden {
     padding-right: 26px;
     margin-left: 27px;
 }
+
+.modal-feedback {
+    display: none;
+    position: fixed;
+    top: 120px;
+    left: 50%;
+    margin-left: -230px;
+    width: 478px; 
+    height: 443px;
+    background: #f8f7f4;
+    border-radius: 5px;
+    box-shadow: 0px 20px 20px 0 rgba(0, 0, 0, 0.4);
+}
+
+.modal-feedback p {
+    font-size: 24px;
+    line-height: 28px;
+    font-weight: 500;
+    color: #323232;
+    margin: 0;
+    margin-top: 15px;
+    margin-left: 24px;
+}
+
+.modal-close {
+    position: absolute;
+    top: 13px;
+    right: 11px;
+    background-color: #f8f7f4;
+    border: 0;
+}
+
+.modal-feedback input {
+    border-radius: 5px;
+    margin-top: 20px;
+    margin-left: 24px;
+    padding-left: 12px;
+    border: 1px solid rgba(178,178,178,.52);
+    width: 267px;
+    height: 44px;
+    padding: 9px 13px;
+    font-size: 16px;
+}
+
+.modal-feedback textarea {
+    padding-left: 12px;
+    margin: 20px 24px;
+    width: 428px;
+    height: 155px;
+    border: 1px solid #d3d3d2;
+}
+
+.feedback {
+    margin-top: -8px;
+    text-align: right;
+}
+
+.modal-feedback .feedback-btn {
+    margin: 5px 25px 25px;
+    text-align: right;
+}
+
 
 .footer-wrapper {
     display: flex;
@@ -1449,4 +1544,256 @@ input[type="radio"].visually-hidden {
 .copyright-link:hover,
 .copyright-link:focus {
     color: #ffbc9e;
+}
+
+.user-btn:hover .modal {
+    display: block;
+}
+
+.modal {
+    display: none;
+    position: absolute;
+    z-index: 2;
+}
+
+.modal-search form {
+    background: #f8f7f4;
+    border-radius: 5px;
+    box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
+    margin-top: 13px;
+    margin-left: -307px;
+}
+
+.modal-search input {
+    box-sizing: border-box;
+    width: 311px;
+    margin: 21px 14px;
+    padding: 8px 12px;
+    border: 1px solid rgba(178, 178, 178, 0.52);
+    border-radius: 5px;
+}
+
+.modal-login form {
+    background: #f8f7f4;
+    border-radius: 5px;
+    box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
+    width: 277px;
+    margin-left: -185px;
+}
+
+.modal-login input {
+    width: 241px;
+    height: 44px;
+    margin-top: 20px;
+    margin-left: 20px;
+    padding: 9px 13px;
+    border: 1px solid #d3d3d2;
+    border-radius: 5px;
+}
+
+.modal-login .btn {
+    margin: 19px 19px 0;
+    padding: 10px 20px 10px;
+    width: 100px;
+    border-radius: 20px;
+    box-shadow: 0px 1px 2px 0 #ac1000;
+}
+
+.modal-login .login-help {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    margin-left: 139px;
+    margin-top: -44px;
+    padding-bottom: 27px;
+}
+
+.login-help a {
+    display: block;
+    margin-bottom: -4px;
+    padding: 0;
+    font-size: 13px;
+    line-height: 24px;
+    font-weight: 400;
+    color: #323232;
+    text-decoration: underline;
+}
+
+.login-help a:hover,
+.login-link a:focus {
+    color: #ffbc9e;
+}
+
+.placeholder {
+    position: relative;
+}
+
+.placeholder input,
+.placeholder textarea {
+    font-family: "Roboto", "Arial", sans-serif;
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 400;
+    box-sizing: border-box;
+}
+
+.placeholder label {
+    display: none;
+}
+
+.placeholder input:required,
+.placeholder textarea:required {
+    box-shadow: none;
+}
+
+.placeholder input::placeholder,
+.placeholder textarea::placeholder {
+    color: #999999;
+}
+
+.placeholder input:hover,
+.placeholder textarea:hover {
+    padding: 6px 12px;
+    border: none;
+    border: 2px solid rgba(154, 154, 154, 0.52);
+}
+
+.placeholder input:focus::placeholder,
+.placeholder textarea:focus::placeholder {
+    color: transparent;
+}
+
+.placeholder input[required]:focus:invalid,
+.placeholder textarea[required]:focus:invalid {
+    padding: 6px 12px;
+    border: 2px solid rgba(46, 136, 228, 0.52);
+}
+
+.placeholder input[required]:focus:invalid + label,
+.placeholder textarea[required]:focus:invalid + label {
+    position: absolute;
+    top: 5px;
+    left: 29px;
+    display: block;
+    color: #5b9ddf;
+    font-size: 11px;
+    line-height: 13px;
+}
+
+.placeholder input[required]:focus:valid + label,
+.placeholder textarea[required]:focus:valid + label {
+    position: absolute;
+    top: 5px;
+    left: 29px;
+    display: block;
+    color: #999999;
+    font-size: 11px;
+    line-height: 13px;
+}
+
+.placeholder input:valid,
+.placeholder textarea:valid {
+    padding: 6px 12px;
+    border: 1px solid rgba(178, 178, 178, 0.52);
+    font-weight: 700;
+}
+
+.modal .basket-fill {
+    margin-top: 11px;
+    margin-left: -422px;
+    padding-top: 10px;
+    width: 539px;
+    font-size: 13px;
+    line-height: 16px;
+    font-weight: 400;
+    color: black;
+    min-height: 232px;
+    background: #f8f7f4;
+    border-radius: 5px;
+    box-shadow: 0px 20px 20px 0 rgba(0, 0, 0, 0.4);
+}
+
+.basket-fill table {
+    margin-left: 15px;
+    margin-top: 1px;
+    border-collapse: collapse;
+}
+
+.basket-fill td {
+    height: 50px;
+}
+
+.table-link a {
+    display: block;
+    width: 232px;
+    font-size: 13px;
+    line-height: 16px;
+    font-weight: 400;
+}
+
+.basket-fill span {
+    padding: 0;
+}
+
+.basket-fill img {
+    padding-top: 5px;
+    padding-right: 5px;
+}
+
+.basket-table a {
+    margin-right: -3px;
+    padding: 0 15px 0 7px;
+    font-size: 13px;
+    line-height: 16px;
+    font-weight: 400;
+    color: #000000;
+}
+
+.basket-fill .table-value {
+    padding-left: 5px;
+    width: 93px;
+    text-align: center;
+}
+
+.basket-fill .table-price {
+    color: #999999;
+
+}
+
+.basket-fill .table-link {
+    vertical-align: bottom;
+}
+
+.basket-fill .line {
+    border-bottom: 1px solid #cacac7;
+    height: 15px;
+}
+
+.basket-fill .close-btn {
+    border: none;
+    background: none;
+    cursor: pointer
+}
+
+.basket-fill .sum {
+    vertical-align: middle;
+    text-align: right;
+    height: 42px;
+}
+
+.sum b {
+    padding: 0;
+    font-size: 15px;
+    line-height: 18px;
+    margin-right: 2px;
+    font-weight: 700;
+}
+
+.checkout {
+    margin-right: 15px;
+    text-align: right;
+}
+
+.checkout .btn {
+    padding: 10px 10px;
 }
